Chamber home page updated. Fixed some alignment issues, fixed wayfinding, and adjusted the hero image.

--- a/chamber/styles/landing-larger.css
+++ b/chamber/styles/landing-larger.css
@@ -46,11 +46,19 @@
 
     }
 
+    .contact {
+        margin-left: 10rem;
+    }
+
+    .student {
+        margin-right: 10rem;
+    }
+
     /* MAIN */
 
     .hero img {
-        width: 1500px;
-        height: 800px;
+        width: 100%;
+        max-height: 600px;
     }
 
     .hero a {
